small front fix

--- a/src/dnft_frontend/assets/main.css
+++ b/src/dnft_frontend/assets/main.css
@@ -321,7 +321,7 @@ button[type="submit"] {
     overflow: hidden;
     justify-content: flex-start;
     gap: 234px;
-    background-image: url(./public/desktop--3@3x.png);
+    background-image: url(./back_create_dNFT.webp);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top;
