--- a/src/dnft_frontend/assets/main.css
+++ b/src/dnft_frontend/assets/main.css
@@ -3,7 +3,7 @@ body {
     font-size: 1.5rem;
     margin: 0;
     line-height: normal;
-    background-image: url('back_create_dNFT.webp');
+    background-image: url('assets/back_create_dNFT.webp');
     background-size: cover;
     background-repeat: no-repeat;
   }
